--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hazy Web Page</title>
 </head>
-<P>
+
     <h2>  Hello,people of Ghana, i have my csd HTML CSS Journey!
 
     </h2>
     
-    <p>herrh! pres go kill we.Tsale 3b3fa
+    <p>herrh! pres go kill we.Tsale 3b3fa I need to practice my HTML and CSS skills.
     </p>
     <strong>but this HTML&CSS </strong><em>go beee waa</em>
-    </P>
 </body>
 </html>
