--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     
     <p>herrh! pres go kill we.Tsale 3b3fa I need to practice my HTML and CSS skills.
     </p>
-    <strong>but this HTML&CSS </strong><em>go beee waaaaaa</em>
+    <strong>But this HTML & CSS </strong><em>go beee waaaaaa</em>
 </body>
 </html>
