--- a/index.html
+++ b/index.html
@@ -14,5 +14,25 @@
     <p>herrh! pres go kill we.Tsale 3b3fa I need to practice my HTML and CSS skills.
     </p>
     <strong>But this HTML & CSS </strong><em>go beee waaaaaa</em>
+    <!--Table completed-->
+    <table border="1"
+
+    <tr>
+        <th>Name</th>
+        <th>Age</th>
+        <th>country</th>
+    </tr>
+    <!--Table row created-->
+    <td>Harry</td>
+    <td>221</td>
+    <td>Ghana</td>
+</tr>
+    <td>John</td>
+    <td>202</td>
+    <td>canada</td>
+</tr>
+    <td>James</td>
+    <td>303</td>
+    <td>USA</td>
 </body>
 </html>
